fixed y overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,14 @@ nextjs-portal {
   display: none;
 }
 
+body > div.tooltip {
+  display: none;
+}
+
+body > div.tooltip ~ div.tooltip {
+  display: block;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
